backend/vulnerability_analysis/testing/bof1/segments/klee-out-0/test000001.user.err
Error: Wrong size given to klee_make_symbolic
File: testing/bof1/segments/segment_1_klee.c
Line: 17
assembly.ll line: 7869
State: 1
Stack: 
	#000007869 in __klee_posix_wrapped_main() at testing/bof1/segments/segment_1_klee.c:17
	#100006069 in __user_main(1, 140635512242176, 140635512242192) at src/runtime/POSIX/klee_init_env.c:245
	#200000523 in __uClibc_main(140619733270528, 1, 140635512242176, 0, 0, 0, 0) at libc/misc/internals/__uClibc_main.c:401
	#300000688 in main(1, 140635512242176)
